--- a/languages/default/de/images.xml
+++ b/languages/default/de/images.xml
@@ -19,6 +19,7 @@
 	<bin_folder>Binaryverzeichnis(z.B. orangebox)</bin_folder>
 	<configs>Configs, die vom User editierbar sein sollen</configs>
 	<configedit>Cvars, die unveränderbar sein sollen</configedit>
+	<copyExtensions>Zu kopierende Dateitypen</copyExtensions>
     <copyStartBinary>Binary Kopieren</copyStartBinary>
 	<del_temp>Template löschen</del_temp>
 	<description>Beschreibung</description>
